# svZeroDSolver-Archived

./: .gitignore  .travis.yml  CODEOWNERS  LICENSE.md  README.md  __init__.py  blocks.py  connections.py  network_util_NR_fast.py  oneD_to_zeroD_convertor.py  pyproject.toml  requirements.txt  run_0d_solver_fast.py  setup.cfg  setup.py  steady_ics.py  svZeroDSolver.py  time_integration.py  todos.txt  use_mean_bcs.py  use_steady_bcs.py  utils.py
.github/workflows/: test.yml
src/: Makefile  blocks.cpp  blocks.hpp  math.cpp  math.hpp  unit_tests  unit_tests.cpp
svzerodsolver/: __init__.py  blocks.py  connections.py  run_tests.py  solver.py  time_integration.py  use_steady_bcs.py  utils.py
test/: run_tests.py  steadyFlow_RL_R.in  steadyFlow_R_RCR.in  steadyFlow_R_steadyPressure.in  steadyFlow_bifurcationR_R.in
test_cases/: pulsatileFlow_R_RCR.in  pulsatileFlow_R_RCR.json  pulsatileFlow_R_coronary.in  pulsatileFlow_R_coronary.json  run_tests.py  steadyFlow_RC_R.in  steadyFlow_RC_R.json  steadyFlow_RC_R_combo.json  steadyFlow_RLC_R.in  steadyFlow_RLC_R.json  steadyFlow_RL_R.in  steadyFlow_RL_R.json  steadyFlow_R_R.in  steadyFlow_R_R.json  steadyFlow_R_RCR.in  steadyFlow_R_RCR.json  steadyFlow_R_RCR_combo.json  steadyFlow_R_coronary.in  steadyFlow_R_coronary.json  steadyFlow_R_steadyPressure.in  steadyFlow_R_steadyPressure.json  steadyFlow_bifurcationR_R.in  steadyFlow_bifurcationR_R.json  steadyFlow_confluenceR_R.json  steadyFlow_stenosis_R.in  steadyFlow_stenosis_R.json
tests/: test_integration.py
tests/cases/: pulsatileFlow_R_coronary.json  steadyFlow_RLC_R.json  (+7 more)
