[metadata]
name = svzerodsolver
version = 1.0
description = A Python lumped-parameter solver for blood flow and pressure in hemodynamic networks.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.0
install_requires =
    numpy
    scipy
    tqdm
    matplotlib
    networkx

[options.extras_require]
dev = 
    pytest
    pytest-cov
    pytest-mock

[options.entry_points]
console_scripts =
    zerod = svzerodsolver.solver:main

